correct programs would likely have to have their own locking.  At the
same time the port buffering refactoring made it possible for us to
avoid the crashes that led to the introduction of locking, but without
locks.  For that reason we have removed port locks, and removed the
"_unlocked" port API variants that were introduced in 2.1.0.

* New deprecations
** `_IONBF', `_IOLBF', and `_IOFBF'

Instead, use the symbol values `none', `line', or `block', respectively,
as arguments to the `setvbuf' function.

* Incompatible changes

** Decoding errors do not advance the read pointer before erroring

When the user sets a port's conversion strategy to "error", indicating
that Guile should throw an error if it tries to read from a port whose
incoming bytes are not valid for the port's encoding, it used to be that
Guile would advance the read pointer past the bad bytes, and then throw
an error.  This would allow the following `read-char' invocation to
proceed after the bad bytes.  This behavior is incompatible with the
final R6RS standard, and besides contravenes the user's intention to
raise an error on bad input.  Guile now raises an error without
advancing the read pointer.  To skip over a bad encoding, set the port
conversion strategy to "substitute" and read a substitute character.

** Decoding errors with `substitute' strategy return U+FFFD

It used to be that decoding errors with the `substitute' conversion
strategy would replace the bad bytes with a `?' character.  This has
been changed to use the standard U+FFFD REPLACEMENT CHARACTER, in
accordance with the Unicode recommendations.

** API to define new port types from C has changed

See the newly expanded "I/O Extensions" in the manual, for full details.
Notably:

*** Remove `scm_set_port_mark'

Port mark functions have not been called since the switch to the BDW
garbage collector.

*** Remove `scm_set_port_equalp'

Likewise port equal functions weren't being called.  Given that ports